Revision history for JSON-Schema-Modern

{{$NEXT}}

0.619     2025-09-28 22:28:52Z
          - internal changes only (breaking changes for dependencies like
            OpenAPI::Modern)

0.618     2025-09-07 20:27:21Z
          - the json-schema-eval executable now also handles YAML-encoded
            schemas and data, via both files and STDIN, via string
            autodetection

0.617     2025-08-16 20:50:11Z
          - various internal changes for performance improvement

0.616     2025-07-26 23:15:28Z
          - documentation notes added for which definitions can be overridden
            (formats, media-types and encodings can; vocabularies cannot).
          - "validate" in JSON::Schema::Modern::Document must now be provided
            with a JSON::Schema::Modern object if a custom metaschema is used
            by the schema (this is a forward-looking change in preparation for
            removing the "evaluator" attribute from the JSMD object in a
            subsequent release).

0.615     2025-07-12 16:12:36Z
          - do not allow the use of builtin bools when Storable is too old to
            know how to serialize them
          - avoid experimental warnings in tests from perl versions 5.36.0 to
            5.40.0

0.614     2025-06-28 18:51:12Z
          - revert to using JSON::PP booleans for now

0.613     2025-06-28 18:07:20Z
          - now checking for keyword collisions in custom vocabulary classes
          - now using builtin booleans when available (requires perl 5.36 and
            Cpanel::JSON::XS 4.38); reverted in 0.614

0.612     2025-06-03 22:50:17Z
          - additional diagnostics to track down some edge case failures

0.611     2025-05-31 03:38:55Z
          - fix integer vs number distinction in draft4 for x.0 values. This
            comes at the expense of properly identifying other numbers as
            integers in draft4 instead of numbers, e.g. 2e1 as a json literal,