@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - new "clone" method for Error objects
 
 0.619     2025-09-28 22:28:52Z
           - internal changes only (breaking changes for dependencies like
